src/objects/ffct__CompareAndDeployJob__c.object
<CustomObject>
    <fields>
        <fullName>ffct__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffct__BatchProcessStatus__c</fullName>
        <formula>TEXT(ffct__BatchProcess__r.ffct__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>ffct__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Compare and Deploy Jobs</relationshipLabel>
        <relationshipName>CompareAndDeployJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffct__ProcessStatus__c</fullName>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__SourceName__c</fullName>
        <description>Source API Name</description>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__TargetName__c</fullName>
        <description>Target API Name</description>
        <label>Target Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>PermissionSet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Compare And Deploy Job</label>
    <nameField>
        <label>Compare And Deploy Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compare And Deploy Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>